---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ??-??-??

  Features:
    - Update for Factorio 2.0
    - Default to HD graphic and removed the classic graphics.
    - Utilized 2.0 autoplace and noise functions.
    - Replaced leveling system with quality spawning system to determine enemy stats.
    - [space-age] [Planet Char]
    - Only legendary units spawn in there.
    - Zerg units hide in asteroid in the routes to Char.  You'll encounter Epic and a few Legendary units.
    - Planet features are subject to change.
    - [space-age] [Zerg on Vulcanus]
    - Optional settings in startup tab.
    - When this is enabled, Demolishers join zerg as an active nydus worm.
    - Spawns attack group periodically.


  Changes:
    - Sound adjustments to make them sound less busy.
    - Health adjustments, slightly higher than before on higher tiers.
    - Max resistance lower from 85-95% to 70-85% with some exceptions.
    - Increased unit movement speed.
    - Capturing Hatchery will turn it into Captive Biter Spawner to make biter eggs.

---------------------------------------------------------------------------------------------------
Version: 1.23.1
Date: 2024-07-02

  Changes:
    - Updated translation from crowdin.
    - Removed duplicated function call.

---------------------------------------------------------------------------------------------------
Version: 1.23.0
Date: 2024-06-07

  Features:
    - Added support for fog of war beacons
    - Added units for scouting subsystem

  Bugfixes:
    - Fixed scourge is not using aerial mask.

---------------------------------------------------------------------------------------------------
Version: 1.22.3
Date: 2023-12-10

  Changes:
    - Zergling pollution_to_join_attack from 3 to 4
    - Hydralisk pollution_to_join_attack from 10 to 8
    - Hydralisk base damage increase from 10 to 15, L20 damage is 135.