@@ -144,3 +144,4 @@ data.erm_aerial_scout = data.erm_aerial_scout or {}
 data.erm_aerial_scout[MOD_NAME] = "mutalisk"
 
 require "prototypes.planets"
+require "prototypes.tips_and_tricks.prototypes"
