@@ -87,4 +87,13 @@ char=Char
 char=Home planet for the legendary Zerg.
 
 [autoplace-control-names]
-enemy_erm_zerg-enemy-base=Zerg Bases
+enemy_erm_zerg-enemy-base=Zerg - Garm Bases
+
+[tips-and-tricks-item-name]
+enemy_erm_zerg-general-info=Zerg - Garm
+enemy_erm_zerg-nydus_worms=Nydus Worms
+enemy_erm_zerg-planet-char=Char
+[tips-and-tricks-item-description]
+enemy_erm_zerg-general-info=An engineer had discovered a new specie in Nauvis' solar system!  You have found an recording about furious Zerg from a deform tank on Vulcanus.
+enemy_erm_zerg-nydus_worms=The Zerg has parasitized the demolishers and turned them into subfamily of the nydus worm.  They puke zerg units when being attacked.  Killing a nydus worm increases 5000 attack points.
+enemy_erm_zerg-planet-char=A new volcanic planet discovered in Nauvis' solar system.  Unlike Vulcanus, it's the home of the Legendary Zerg forces.
