@@ -1,0 +1,194 @@
+---
+--- Generated by EmmyLua(https://github.com/EmmyLua)
+--- Created by heyqule.
+--- DateTime: 11/2/2024 7:01 PM
+---
+---
+local simulations = {}
+
+simulations.general = {
+    init = [[
+require("__core__/lualib/story")
+local sim = game.simulation
+
+
+sim.camera_position = {0, 0}
+sim.camera_zoom = 0.85
+sim.hide_cursor = true
+local surface = game.surfaces[1]
+
+
+local tank
+local story_table =
+{
+    {
+        {
+            name = "start",
+            init = function()
+                local entities = surface.find_entities {{-100, -100}, {100, 100}}
+                for _, ent in pairs(entities) do
+                    ent.destroy()
+                end
+                tank = surface.create_entity { name="tank", position={0, 10}, force="player" }
+                biter1 = surface.create_entity { name="enemy_erm_zerg--zergling--5", position={-3, -10} }
+                biter2 = surface.create_entity { name="enemy_erm_zerg--broodling--5", position={0, -10} }
+                biter2 = surface.create_entity { name="enemy_erm_zerg--broodling--5", position={3, -10} }
+                biter3 = surface.create_entity { name="enemy_erm_zerg--hydralisk--5", position={10, -10} }
+            end
+        },
+        {
+            condition = story_elapsed_check(2),
+            action = function()
+                biter1 = surface.create_entity { name="enemy_erm_zerg--ultralisk--3", position={-3, -10} }
+                biter2 = surface.create_entity { name="enemy_erm_zerg--mutalisk--3", position={0, -10} }
+                biter3 = surface.create_entity { name="enemy_erm_zerg--lurker--3", position={10, -10} }
+            end
+        },
+        {
+            condition = story_elapsed_check(3),
+            action = function()
+                tank.die()
+            end
+        },
+        {
+            condition = story_elapsed_check(3),
+            action = function()
+                story_jump_to(storage.story, "start")
+            end
+        }
+    }
+}
+tip_story_init(story_table)
+    ]],
+}
+
+simulations.nydus_worms = {
+    init_update_count = 60,
+    init = [[
+require("__core__/lualib/story")
+
+game.planets["vulcanus"].create_surface()
+local vulcanus_surface = game.surfaces["vulcanus"]
+vulcanus_surface.request_to_generate_chunks({0,0}, 2)
+vulcanus_surface.force_generate_chunk_requests()
+
+local sim = game.simulation
+player = sim.create_test_player{name = "you"}
+sim.camera_player = player
+sim.camera_position = {0, 0}
+sim.camera_zoom = 0.75
+sim.hide_cursor = true
+
+
+local story_table =
+{
+    {
+        {
+            name = "start",
+            init = function()
+                local entities = vulcanus_surface.find_entities_filtered {type={"unit","segmented-unit"}}
+                for _, ent in pairs(entities) do
+                    ent.destroy()
+                end
+                player.teleport({0,0}, "vulcanus")
+                vulcanus_surface.create_entity { name="enemy_erm_zerg--small-demolisher", position={0, 0} }
+            end,
+        },
+        {
+            condition = story_elapsed_check(2),
+            action = function()
+                vulcanus_surface.create_entity { name="enemy_erm_zerg--zergling--3", position={-8, 0} }
+                vulcanus_surface.create_entity { name="enemy_erm_zerg--zergling--3", position={8, 0} }
+                vulcanus_surface.create_entity { name="enemy_erm_zerg--mutalisk--3", position={-8, 4} }
+                vulcanus_surface.create_entity { name="enemy_erm_zerg--mutalisk--3", position={8, 4} }
+            end
+        },
+        {
+            condition = story_elapsed_check(3),
+            action = function()
+                story_jump_to(storage.story, "start")
+            end
+        }
+    }
+}
+tip_story_init(story_table)
+]]
+}
+
+simulations.planet_char = {
+    init = [[
+require("__core__/lualib/story")
+
+game.planets["char"].create_surface()
+local char_surface = game.surfaces["char"]
+char_surface.request_to_generate_chunks({0,0}, 2)
+char_surface.force_generate_chunk_requests()
+
+local sim = game.simulation
+player = sim.create_test_player{name = "you"}
+sim.camera_player = player
+sim.camera_position = {0, 0}
+sim.camera_zoom = 0.5
+sim.hide_cursor = true
+
+local story_table =
+{
+    {
+        {
+            name = "start",
+            init = function()
+                local entities = char_surface.find_entities_filtered {type={"unit","segmented-unit"}}
+                for _, ent in pairs(entities) do
+                    ent.destroy()
+                end
+
+                char_surface.create_entity { name="cargo-landing-pad", position={-25, -10}, force="player" }
+                player.teleport({-22,0}, "char")
+                for _, y in pairs({-5,0,5}) do
+                    for _, x in pairs({-20, -17}) do
+                        local gun = char_surface.create_entity { name="gun-turret", position={x, y}, force="player" }
+                        local inventory = gun.get_inventory(defines.inventory.turret_ammo)
+                        inventory.insert({name = "piercing-rounds-magazine", count = 100})
+                    end
+                end
+
+                for i = -10, 10, 1 do
+                    char_surface.create_entity { name="stone-wall", position={-15, i}, force="player" }
+                end
+
+                char_surface.create_entity { name="enemy_erm_zerg--hive--5", position={12, -5} }
+                char_surface.create_entity { name="enemy_erm_zerg--spawning_pool--5", position={12, 5} }
+                char_surface.create_entity { name="enemy_erm_zerg--spire--5", position={16, 0} }
+            end,
+        },
+        {
+            condition = story_elapsed_check(2),
+            action = function()
+                char_surface.create_entity { name="enemy_erm_zerg--zergling--5", position={8, 2} }
+                char_surface.create_entity { name="enemy_erm_zerg--hydralisk--5", position={8, 0} }
+                char_surface.create_entity { name="enemy_erm_zerg--mutalisk--5", position={8, 4} }
+                char_surface.create_entity { name="enemy_erm_zerg--overlord--5", position={8, 6} }
+            end
+        },
+        {
+            condition = story_elapsed_check(2),
+            action = function()
+                char_surface.create_entity { name="enemy_erm_zerg--guardian--5", position={8, 2} }
+                char_surface.create_entity { name="enemy_erm_zerg--lurker--5", position={8, 0} }
+                char_surface.create_entity { name="enemy_erm_zerg--defiler--5", position={8, 4} }
+                char_surface.create_entity { name="enemy_erm_zerg--ultralisk--5", position={8, 6} }
+            end
+        },
+        {
+            condition = story_elapsed_check(10),
+            action = function()
+                story_jump_to(storage.story, "start")
+            end
+        }
+    }
+}
+tip_story_init(story_table)
+]]
+}
+
+return simulations
